feat: added paystack payment implementation.
Signed-off-by: aniebietafia <aniebietafia87@gmail.com>

feat: added paystack payment implementation.

Signed-off-by: aniebietafia <aniebietafia87@gmail.com>